--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,21 +12,9 @@ add_executable(${PROJECT_NAME})
 # features
 set_target_properties(${PROJECT_NAME}
     PROPERTIES 
-        C_STANDARD          90 
+        C_STANDARD          90
         C_STANDARD_REQUIRED ON
         C_EXTENSIONS        OFF)
-
-# find external libraries
-# find_package(Vulkan REQUIRED)
-
-# link libraries
-# target_link_libraries(${PROJECT_NAME} 
-#   PUBLIC ${Vulkan_LIBRARIES})
-
-# includes
-# target_include_directories(${PROJECT_NAME} 
-#   PUBLIC ${Vulkan_INCLUDE_DIR}
-#   PUBLIC src)
 
 # add sources
 add_subdirectory(deps)
@@ -34,7 +22,7 @@ add_subdirectory(src)
 
 # compile options
 target_compile_options(${PROJECT_NAME} PUBLIC
-	"$<$<COMPILE_LANG_AND_ID:C,Clang,AppleClang>:"
+	"$<$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>:"
 		-Wall
 		-Wshadow
 		-Wextra
@@ -43,30 +31,24 @@ target_compile_options(${PROJECT_NAME} PUBLIC
 		-pedantic-errors
 		-Walloca 
 		-Wvla 
-    -fdiagnostics-color=always
+		-fdiagnostics-color=always
   ">"
-	"$<$<AND:$<COMPILE_LANG_AND_ID:C,Clang,AppleClang>,$<CONFIG:Debug>>:"
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Debug>>:"
 		-O0
 		-g
-    -fsanitize=address
-    -fsanitize=undefined
-    -fsanitize=bounds
-#   -fsanitize=leak
+		-fsanitize=address
+		-fsanitize=undefined
+		-fsanitize=bounds
   ">"
-	"$<$<AND:$<COMPILE_LANG_AND_ID:C,Clang,AppleClang>,$<CONFIG:Release>>:"
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Release>>:"
 		-Ofast
-    -flto
   ">")
 
 # link options
 target_link_options(${PROJECT_NAME} PUBLIC
-	"$<$<AND:$<COMPILE_LANG_AND_ID:C,Clang,AppleClang>,$<CONFIG:Debug>>:"
-    -fsanitize=address
-    -fsanitize=undefined
-    -fsanitize=bounds
-#		-fsanitize=leak
-  ">"
-	"$<$<AND:$<COMPILE_LANG_AND_ID:C,Clang,AppleClang>,$<CONFIG:Release>>:"
-    -flto
+	"$<$<AND:$<COMPILE_LANG_AND_ID:CXX,Clang,AppleClang>,$<CONFIG:Debug>>:"
+		-fsanitize=address
+		-fsanitize=undefined
+		-fsanitize=bounds
   ">")
 
